--- a/data/docentes.yaml
+++ b/data/docentes.yaml
@@ -211,7 +211,7 @@ vigusmao:
   cargo: associado
 
 vivian:
-  nome: Vivan dos Santos Silva
+  nome: Vivian dos Santos Silva
   lattes: https://lattes.cnpq.br/6480849016794725
   cargo: assistente
 
