--- a/data/outros.yaml
+++ b/data/outros.yaml
@@ -6,3 +6,10 @@ cassioefs:
 joaovbn:
   nome: João Victor Nascimento
 
+# membro da Congregação
+izabelsra:
+  nome: Izabel Alcântara
+
+# membro da Congregação
+vitorfca:
+  nome: Vitor Fernandes de Carvalho Ambrizzi
