página Normas de Estágio

--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -19,7 +19,7 @@
         # - name: Identidade Visual
     - name: Serviços
       children:
-        - name: Laboratórios de Computação e Informática
+        - name: Laboratório de Computação e Informática
         - name: Cadastro de Alunos Novos
 
 - name: Graduação
@@ -30,11 +30,11 @@
           url: /info/sobre-o-bcc/
         - name: Grade Curricular
         - name: Normas de Estágio
+          url: /info/normas-estagio-bcc/
         - name: Normas de Atividades Complementares
         - name: Normas de TCC
         - name: Calendário de Provas
           url: /info/calendario-provas-bcc/
-        - name: Grade de Disciplinas
         - name: Formas de Acesso
           url: /info/formas-de-acesso-bcc/
         - name: CAInfo
