--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ trim_trailing_whitespace = true
 [*.css]
 indent_style = tab
 
-[*.{html,md,yaml,toml,json}]
+[*.{html,md,yaml,toml,json,js}]
 indent_style = space
 indent_size = 2
 
