tirados emails dos tecnicos

--- a/data/tecnicos.yaml
+++ b/data/tecnicos.yaml
@@ -9,26 +9,32 @@ patriciawirzmarinhomanede:
 
 rodrigomello:
   nome: Rodrigo Araújo de Mello
+  email: OCULTO
   cargo: tecnico
 
 marcusoliveira:
   nome: Marcus Vinicius M. Oliveira
+  email: OCULTO
   cargo: tecnico
 
 fabianarocha:
   nome: Fabiana Barbosa Rocha
+  email: OCULTO
   cargo: tecnico
 
 rerison:
   nome: Rerison Wilber Cavalcante Rocha
+  email: OCULTO
   cargo: tecnico
 
 karlasantanna:
   nome: Karla Sant'Anna de Moura Coutinho
+  email: OCULTO
   cargo: tecnico
 
 tiagoms:
   nome: Tiago Matias da Silva
+  email: OCULTO
   cargo: tecnico
 
 
