rascunho da página atividades complementares

--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -33,6 +33,7 @@
         - name: Normas de Estágio
           url: /info/normas-estagio-bcc/
         - name: Normas de Atividades Complementares
+          url: /info/atividades-complementares-bcc/
         - name: Normas de TCC
         - name: Calendário de Provas
           url: /info/calendario-provas-bcc/
