adicionada página sobre o TCC

--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -35,6 +35,7 @@
         - name: Normas de Atividades Complementares
           url: /info/atividades-complementares-bcc/
         - name: Normas de TCC
+          url: /info/tcc-bcc/
         - name: Calendário de Provas
           url: /info/calendario-provas-bcc/
         - name: Formas de Acesso
