adicionada página Grade Curricular do BCC

--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -30,6 +30,7 @@
         - name: Sobre o Curso
           url: /info/sobre-o-bcc/
         - name: Grade Curricular
+          url: /info/grade-curricular-bcc/
         - name: Normas de Estágio
           url: /info/normas-estagio-bcc/
         - name: Normas de Atividades Complementares
