normas de atividades complementares - curriculo 2010/1

--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -35,6 +35,8 @@
           url: /info/normas-estagio-bcc/
         - name: Normas de Atividades Complementares
           url: /info/atividades-complementares-bcc/
+        - name: Normas de Atividades Complementares Currículo Antigo
+          url: /info/atividades-complementares-bcc-old/
         - name: Normas de TCC
           url: /info/tcc-bcc/
         - name: Calendário de Provas
@@ -64,10 +66,8 @@
 - name: Pós-Graduação
   children:
     - children:
-      - name: PPGI
-        url: /info/ppgi/
-
-
+        - name: PPGI
+          url: /info/ppgi/
 # - name: Usuário
 #   children:
 #     - children:
