Corrigir cargos de alguns professores
Co-authored-by: Arthur Bacci <arthurbacci@protonmail.com>

--- a/data/docentes.yaml
+++ b/data/docentes.yaml
@@ -61,6 +61,7 @@ sadoc:
   nome: Daniel Sadoc Menasché
   site:   https://ic.ufrj.br/~sadoc
   lattes: https://lattes.cnpq.br/9931198850020140
+  cargo: adjunto
 
 eldany:
   nome: Eldanae Nogueira Teixeira
@@ -82,7 +83,7 @@ giseli:
   nome: Giseli Rabello Lopes
   site: https://ic.ufrj.br/~giseli
   lattes: https://lattes.cnpq.br/9439416101626260
-  cargo: assistente
+  cargo: adjunto
 
 hugonobrega:
   nome: Hugo Nobrega
@@ -98,7 +99,7 @@ hugomg:
 jpaixao:
   nome: João Paixão
   lattes: https://lattes.cnpq.br/5705386762324718
-  cargo: assistente
+  cargo: adjunto
 
 jcps:
   nome: João Carlos Pereira da Silva
