--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -16,7 +16,7 @@
         # - name: "Missão, Visão e Valores"
         # - name: Espaço Físico
         # - name: Identidade Visual
-    - name: Serviços do Instituto
+    - name: Serviços
       children:
         - name: Laboratório de Computação e Informática
           url: /info/lci/
@@ -47,7 +47,7 @@
           url: /info/cainfo/
         - name: Manual do Aluno
           url: /info/manual-do-aluno-bcc/
-    - name: Ciências Matemáticas e da Terra
+    - name: Ciências Matemáticas e da Terra # obs: non-break-space no "da Terra"
       children:
         - name: Ênfase em Análise de Dados
           url: /info/analise-de-dados-bcmt/
