--- a/data/menus/links.pt.yaml
+++ b/data/menus/links.pt.yaml
@@ -2,7 +2,7 @@
   url: https://ufrj.br/
 - name: CCMN
   url: https://ccmn.ufrj.br/
-- name: Ouvidoria UFRJ
+- name: Ouvidoria
   url: https://ouvidoria.ufrj.br/
 - name: Intranet
   url: https://intranet.ufrj.br/
