adicionado Colação de Grau do BCC

--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -41,6 +41,8 @@
           url: /info/calendario-provas-bcc/
         - name: Formas de Acesso
           url: /info/formas-de-acesso-bcc/
+        - name: Colação de Grau
+          url: /info/colacao-de-grau-bcc/
         - name: CAInfo
           url: /info/cainfo/
         - name: Manual do Aluno
