--- a/data/docentes.yaml
+++ b/data/docentes.yaml
@@ -59,7 +59,7 @@ dgalfaro:
 
 sadoc:
   nome: Daniel Sadoc Menasché
-  site:   https://ic.ufrj.br/~sadoc
+  # site:   https://ic.ufrj.br/~sadoc
   lattes: https://lattes.cnpq.br/9931198850020140
   cargo: adjunto
 
