Website do Paulo Mann

--- a/data/docentes.yaml
+++ b/data/docentes.yaml
@@ -169,6 +169,7 @@ mitre:
 
 paulomann:
   nome: Paulo Mann
+  site: https://paulomann.github.io
   lattes: https://lattes.cnpq.br/3571577377652346
   cargo: assistente
 
