--- a/data/docentes.yaml
+++ b/data/docentes.yaml
@@ -109,7 +109,7 @@ jcps:
 
 jonice:
   nome: Jonice Oliveira
-  # site: https://www.joniceoliveira.net/
+  site: https://www.joniceoliveira.net/
   lattes: https://lattes.cnpq.br/0990344839864230
   cargo: associado
 
