--- a/data/docentes.yaml
+++ b/data/docentes.yaml
@@ -87,7 +87,7 @@ giseli:
 
 hugonobrega:
   nome: Hugo Nobrega
-  # site: https://hugonobrega.com/
+  site: https://hugonobrega.com/
   lattes: https://lattes.cnpq.br/6062840240299930
   cargo: adjunto
 
