modificado link dos formulários

--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -57,7 +57,7 @@
         - name: Calendário Acadêmico
           url: /info/calendario-academico/
         - name: Formulários e Requerimentos
-          url: /info/formularios/
+          url: /info/formularios-graduacao/
         - name: Inscrição em Disciplina
           url: /info/inscricao-em-disciplina/
         - name: Ofertas de Monitoria
