adicionadas páginas temporárias no lugar dos links quebrados

--- a/data/menus/principal.pt.yaml
+++ b/data/menus/principal.pt.yaml
@@ -66,16 +66,16 @@
 - name: Pesquisa
   children:
     - children:
-      - name: Grupos de Pesquisa
+      # - name: Grupos de Pesquisa
         # url: /info/grupos-de-pesquisa/
       - name: Iniciação Científica
-        # url: /info/iniciacao-cientifica/
+        url: /info/iniciacao-cientifica/
 
 - name: Extensão
   children:
     - children:
       - name: Projetos de Extensão
-        # url: /info/projetos-extensao/
+        url: /info/projetos-extensao/
 
 - name: Pós-Graduação
   children:
