adicionado site do jpaixao

--- a/data/docentes.yaml
+++ b/data/docentes.yaml
@@ -99,6 +99,7 @@ hugomg:
 jpaixao:
   nome: João Paixão
   lattes: https://lattes.cnpq.br/5705386762324718
+  site: https://www.joaopaixao.com/
   cargo: adjunto
 
 jcps:
