--- a/data/docentes.yaml
+++ b/data/docentes.yaml
@@ -61,7 +61,7 @@ sadoc:
   nome: Daniel Sadoc Menasché
   # site:   https://ic.ufrj.br/~sadoc
   lattes: https://lattes.cnpq.br/9931198850020140
-  cargo: adjunto
+  cargo: associado
 
 eldany:
   nome: Eldanae Nogueira Teixeira
