Adicionar Silas ao corpo docente

--- a/data/docentes.yaml
+++ b/data/docentes.yaml
@@ -189,6 +189,11 @@ sergioserra:
   lattes: https://lattes.cnpq.br/7618571401128973
   cargo: assistente
 
+silaslfilho:
+  nome: Silas Lima Filho
+  lattes: https://lattes.cnpq.br/4567131372970696
+  cargo: assistente
+
 collier:
   nome: Severino Collier Coutinho
   site: https://ic.ufrj.br/~collier
