Adicionar prof. Matheus Adauto

--- a/data/docentes.yaml
+++ b/data/docentes.yaml
@@ -4,6 +4,11 @@
 
 # 1) Professores permanentes
 
+adauto:
+  nome: Matheus Adauto
+  lattes: https://lattes.cnpq.br/7885203473345599
+  cargo: assistente
+
 avivacqua:
   nome: Adriana S. Vivacqua
   lattes: https://lattes.cnpq.br/6494676052801758
